# developer_interview

./: .dockerignore  .env.db  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  alembic.ini  backup.sql  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  start.bat  start.sh
alembic/: env.py
alembic/versions/: 15ebd6d07bfd_create_users_table.py  6b8e7ca4b360_create_users_table.py  938e5390a895_create_users_table.py
config/: chatbot_config.yml  llm_config.yml
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/axios/: axios.ts
front-end/src/components/: AddProductCard.tsx  MapCard.tsx  MyCard.tsx  MyChatBot.tsx  MyNavbar.tsx
front-end/src/pages/: Contacts.tsx  Home.tsx  Products.tsx
nginx/: nginx.conf
src/: main.py
src/api/v1/: cetegory_endpoints.py  chatbot_endpoints.py  endpoint.py  product_endpoint.py  users_endpoint.py
src/api/v1/models/: response_models.py
src/config/: db_setting.py  llm_setting.py
src/core/: category_service.py  chatbot_service.py  product_service.py
src/core/users/: user_service.py
src/database/: db_factory.py
src/database/database_instance/: db_instance.py
src/entities/: category_crud.py  category_entity.py  product_crud.py  product_entity.py  user_entity.py
src/entities/category/: category_crud.py  category_entity.py
src/entities/product/: product_crud.py  product_entity.py
src/llm/: chatbot.py  llm_factory.py
src/llm/llm_implementation/: llm_anthropic_model.py  llm_aws_model.py  llm_azure_model.py  llm_groq_model.py  llm_openai_model.py
src/log/: logger.py  logger_decorator.py
src/models/: chat_model.py  request_models.py  response_models.py
src/utilis/: sys_utilis.py
